# litert-lm-cookbook

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
colab/: 01_basic_chat.ipynb  02_streaming_chat_loop.ipynb  03_system_prompt.ipynb  04_gpu_backend.ipynb  05_speculative_decoding.ipynb  06_tool_use.ipynb  07_multimodal_audio.ipynb  08_multimodal_vision.ipynb  09_streaming_with_system_prompt.ipynb  10_all_features.ipynb  11_openai_api_server.ipynb  12_sampler_config.ipynb  13_tool_event_handler.ipynb  14_manual_tool_calling.ipynb  15_session_api.ipynb  16_benchmark.ipynb  17_tokenizer.ipynb  README.md
python/: 06_tool_use.py  11_openai_api_server.py  17_tokenizer.py  README.md
