[project]
name = "litert-llm-cookbook"
version = "1.0.0"
description = "Runnable Python scripts and Colab notebooks for LiteRT-LM on-device inference with Gemma-4"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Onuralp Sezer", email = "thunderbirdtr@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "litert-lm-api-nightly",
    "litert-lm",
    "openai",
    "requests",
]

[project.urls]
Homepage = "https://github.com/onuralpszr/litert-llm-cookbook"
Repository = "https://github.com/onuralpszr/litert-llm-cookbook"
Issues = "https://github.com/onuralpszr/litert-llm-cookbook/issues"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM117", # nested with statements are clearer when inner context depends on outer
]

[tool.ruff.lint.isort]
known-first-party = ["litert_lm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
